--- a/css/screen.css
+++ b/css/screen.css
@@ -1658,6 +1658,15 @@ body {
     .logoTop__phone, .headerButtons__button--call {
         margin-bottom: 2em;
     }
+    .serviceShell {
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 556px) {
+    .icoPos_lft.icoSize_36:before {
+        margin-top: 0px;
+    }
 }
 
 @media screen and (min-width: 1180px) {
